@@ -1,5 +1,13 @@
 2007-02-11 Fred Kiefer <FredKiefer@gmx.de>
 	
+	* Source/cairo/CairoGState.m (-DPScharpath::, -DPSshow:,
+	-GSSetFont:, -GSSetFontSize:, -GSShowText::, -GSShowGlyphs::):
+	Protect all font operation from _ct being NULL. 
+	* Source/cairo/CairoGState.m (-compositeGState:...fraction:):
+	Small improvement for scrolling.
+	
+2007-02-11 Fred Kiefer <FredKiefer@gmx.de>
+	
 	* Source/cairo/CairoGState.m (-GSReadRect:): Implemented this method.
 
 2007-02-10 Fred Kiefer <FredKiefer@gmx.de>
